--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "online-coupons",
   "version": "0.1.0",
-  "homepage": "https://github.com/dev-dheeraj/onlinecoupons",
+  "homepage": "http://dev-dheeraj.github.io/onlinecoupons",
+  
   "private": true,
   "dependencies": {
     "-": "0.0.1",
