--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "online-coupons",
   "version": "0.1.0",
-  "homepage": "http://dev-dheeraj.github.io/onlinecoupons",
+  "homepage": "http://dev-dheeraj.github.io/",
   
   "private": true,
   "dependencies": {
