--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "online-coupons",
   "version": "0.1.0",
-  "homepage": "http://dev-dheeraj.github.io/",
-  
+  "homepage": "http://dev-dheeraj.github.io/onlinecoupons/",
   "private": true,
   "dependencies": {
     "-": "0.0.1",
